<resources>
    <string name="again_accredit">再次授予权限</string>
    <string name="goto_setting">去设置中心</string>
    <string name="never_again">该权限非常重要, 没有该权限应用将无法运行 , 请确认是否去设置中心授予该权限</string>
    <string name="permission_failed_msg">该权限非常重要, 没有该权限应用将无法运行 , 请确认是否授予该权限</string>

    <string name="app_name">币动精灵</string>
    <string name="item_essence">精华</string>
    <string name="item_information">消息</string>
    <string name="item_currency">牛币</string>
    <string name="item_user">我的</string>
    <string name="loading">拼命加载中...</string>
    <string name="load_failed">加载失败，点击重试</string>
    <string name="exit_app">再按一次退出程序</string>
    <string name="item_time_format">时间:yyyy年MM月dd日 hh:mm</string>
    <string name="item_history">我浏览的历史</string>
    <string name="item_praised">我赞过的帖子</string>
    <string name="item_about">关于我们</string>
    <string name="item_option">设置</string>
    <string name="string_loadmore">加载中...</string>
    <string name="cancle">取消</string>
    <string name="warn">警告</string>
    <string name="market_value">市值</string>
    <string name="amount_of_increase">涨幅</string>
    <string name="self_select">自选</string>
    <string name="attention">关注</string>
    <string name="unattention">已关注</string>
    <string name="unattention_success">取消关注成功</string>
    <string name="read_phone_desc">\"币动精灵\"需要使用电话权限用于读取本机标识码, 这些标识码用于标识您的设备, 在服务器存储您的订阅比特币信息,
        以便在您使用时及时将您订阅的信息推送更新到您的设备上, 没有该权限您将无法使用本应用,
    </string>
    <string name="permission_again"> 请确认是否授予该权限</string>
    <string name="permission_gotosetting"> 请确认是否去设置中心授予该权限</string>
    <string name="attention_failed_token">关注失败, token为空</string>
    <string name="unattention_failed_token">取消关注失败, token为空</string>
    <string name="deviceId">订阅失败,设备唯一标识 deviceId 为空</string>
    <string name="undeviceId">取消订阅失败,设备唯一标识 deviceId 为空</string>
    <string name="attention_failed_net">订阅失败,请检查网络</string>
    <string name="unattention_failed_net">取消订阅失败,请检查网络</string>
    <string name="attention_success">关注成功</string>
    <string name="feedback">意见反馈</string>
    <string name="clean_cache">清除缓存</string>
    <string name="message_onoff">推送消息</string>
    <string name="share">分享给好友</string>
    <string name="evaluate">给我们评分</string>
    <string name="version">版本号</string>

    <string name="app_version">version: 1.0</string>
    <string name="push_on">消息推送开启</string>
    <string name="push_off">消息推送关闭</string>
    <string name="self_select_add">+添加, 编辑自选行情</string>
    <string name="self_selector_title">牛币自选</string>
    <string name="search">搜索</string>
    <string name="new_version">发现新版本:</string>
    <string name="talk_later">以后再说</string>
    <string name="now_update">立即升级</string>
    <string name="night_mode">夜间模式</string>
    <string name="search_empty_msg">请输入搜索内容</string>
    <string name="no_net">没有网络, 请检查网络设置后重试</string>
    <string name="unknown_err">失败, 未知错误</string>
    <string name="did_not_find">抱歉, 什么也没有找到</string>
    <string name="look_img">查看图片</string>
    <string name="save_img">保存图片</string>
</resources>
