<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/titleColor">
        <TextView
            style="@style/TextTitle"
            android:layout_centerInParent="true"
            android:text="@string/item_option"/>
    </RelativeLayout>
    <com.eshel.currencyspirit.widget.OverScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#EFEFF4"
            android:orientation="vertical">
            <com.eshel.currencyspirit.widget.OptionItemView
                android:id="@+id/feedback"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                app:item_icon2_visivity="visivity"
                app:item_mode="all"
                app:item_title="@string/feedback"
                app:paddingStart="4dp"/>
            <com.eshel.currencyspirit.widget.OptionItemView
                android:id="@+id/clean_cache"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:item_icon2_visivity="invisivity"
                app:item_style="style_text"
                app:item_mode="top"
                app:item_title="@string/clean_cache"
                app:paddingStart="4dp"/>
            <com.eshel.currencyspirit.widget.OptionItemView
                android:id="@+id/message_onoff"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:item_style="style_switch"
                app:item_icon="@drawable/option_icon"
                app:item_icon2_visivity="invisivity"
                app:item_mode="middle"
                app:item_title="@string/message_onoff"/>
            <com.eshel.currencyspirit.widget.OptionItemView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:item_icon="@drawable/option_icon"
                app:item_icon2_visivity="visivity"
                app:item_mode="bottom"
                app:item_title="@string/item_about"/>
            <com.eshel.currencyspirit.widget.OptionItemView
                android:id="@+id/share"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                app:item_icon="@drawable/option_icon"
                app:item_icon2_visivity="visivity"
                app:item_mode="top"
                app:item_title="@string/share"/>
            <com.eshel.currencyspirit.widget.OptionItemView
                android:id="@+id/evaluate"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:item_icon="@drawable/option_icon"
                app:item_icon2_visivity="visivity"
                app:item_mode="middle"
                app:item_title="@string/evaluate"/>
            <com.eshel.currencyspirit.widget.OptionItemView
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:item_icon="@drawable/option_icon"
                app:item_icon2_visivity="invisivity"
                app:item_style="style_text"
                app:item_text="@string/app_version"
                app:item_mode="bottom"
                app:item_title="@string/version"/>
        </LinearLayout>
    </com.eshel.currencyspirit.widget.OverScrollView>
</LinearLayout>