<?xml version="1.0" encoding="utf-8"?>
<com.eshel.currencyspirit.widget.OverScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/OverScroller"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EFEFF4"
        android:orientation="vertical">
        <com.eshel.currencyspirit.widget.OptionItemView
            android:id="@+id/item_icon"
            android:background="#E9E8EB"
            app:item_title_gravity="top"
            app:item_icon_type="center"
            app:item_title_size="20"
            app:item_title_style="bold"
            app:item_icon2_visivity="invisivity"
            app:item_icon="@mipmap/ic_launcher"
            app:item_mode="all"
            app:iconPaddingRight="20dp"
            app:item_title="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="80dp"/>
        <com.eshel.currencyspirit.widget.OptionItemView
            android:id="@+id/item_history"
            android:layout_marginTop="@dimen/item_divider"
            android:background="#E9E8EB"
            app:item_icon="@drawable/history"
            app:item_mode="top"
            app:iconPaddingRight="20dp"
            app:item_title="@string/item_history"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>
        <com.eshel.currencyspirit.widget.OptionItemView
            android:id="@+id/item_praised"
            android:background="#E9E8EB"
            app:item_icon="@drawable/zan"
            app:item_mode="bottom"
            app:iconPaddingRight="20dp"
            app:item_title="@string/item_praised"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>
        <com.eshel.currencyspirit.widget.OptionItemView
            android:id="@+id/item_about"
            android:layout_marginTop="@dimen/item_divider"
            android:background="#E9E8EB"
            app:item_icon="@drawable/about"
            app:item_mode="top"
            app:iconPaddingRight="20dp"
            app:item_title="@string/item_about"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>
        <com.eshel.currencyspirit.widget.OptionItemView
            android:id="@+id/item_option"
            android:background="#E9E8EB"
            app:item_icon="@drawable/setting"
            app:item_mode="bottom"
            app:iconPaddingRight="20dp"
            app:item_title="@string/item_option"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>
    </LinearLayout>
</com.eshel.currencyspirit.widget.OverScrollView>